samples/_failures_safe/1761296743_59d857_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d83d650.c:153:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  153 | void print
      | ^~~~
